# orientiq

./: .gitattributes  .gitignore  CLAUDE.md  CNAME  ORIENT_OPT_SPEC.md  README.md  TODO.md  environment.yml  improvements.md  index.html  pyproject.toml  run.sh
3dmodels/: 00_cone.stl  01_sphere.stl  02_mushroom.stl  03_disc.stl  04_L_shape.stl  05_T_shape.stl  06_inv_pyramid.stl  07_hook.stl  08_helix.stl  alien.stl  barry.stl  binaculares.STL  bracket_reproduced.stl  bracket_v2.stl  car.stl  carpart.stl  dice.stl  fan.stl  figure.stl  flute.stl  gadget.stl  gadget2.stl  heartstool.stl  house.stl  keyring.stl  mrhat.stl  pcpart.stl  person.stl  ring.stl  rings.stl  rocket.stl  screw.stl  seal.stl  sink.stl  spiral.stl  tool.stl  tractor.stl  trebol.stl  tripod.stl  tube.stl  (+2 more)
3dmodels/bracket_faces/: face_01.stl  face_02.stl  face_03.stl  face_04.stl  face_05.stl  face_06.stl  face_07.stl  (+18 more)
benchmark/: benchmark_mac.py  mc_bench.py
orient_opt/: __init__.py  __main__.py  critical_points.py  gradients.py  hopf.py  objectives.py  optimizer.py  pareto.py  preprocess.py  sampling.py  types.py
scraping/: .env.example  CLAUDE.md  analyze.py  config.py  deep_analyze.py  generate_report.py  main.py  print-orientation-research-pipeline.md  process_batch2.py  requirements.txt
scripts/: benchmark_report.py  google_apps_script.gs  make_bracket.py  plane_fit.py
tests/: conftest.py  test_critical_points.py  test_gradients.py  test_hopf.py  test_integration.py  test_objectives.py  test_optimizer.py  test_pareto.py  test_sampling.py
trellis/: server.py
webapp/: server.py
(+13 files in other folders)
