[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orient-opt"
version = "0.1.0"
description = "Optimal 3D printing orientation via S² search and Hopf fibration"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
mesh = ["trimesh>=4.0"]
pareto = ["pymoo>=0.6"]
webapp = ["fastapi", "uvicorn", "fast_simplification"]
all = ["trimesh>=4.0", "pymoo>=0.6", "scipy>=1.10", "fastapi", "uvicorn", "fast_simplification"]
dev = [
    "trimesh>=4.0",
    "pymoo>=0.6",
    "scipy>=1.10",
    "fastapi",
    "uvicorn",
    "fast_simplification",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["orient_opt*"]

[project.scripts]
orient-opt = "orient_opt.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
